Fix import path to ExternalAnchor

--- a/src/content/projects/yass/index.mdx
+++ b/src/content/projects/yass/index.mdx
@@ -9,6 +9,6 @@ publish: true
 lang: 'TypeScript'
 ---
 
-import XA from '../../../../components/ExternalAnchor.js';
+import XA from 'components/ExternalAnchor.js';
 
 YASS is a pure TypeScript implementation of Peter Norvig's <XA href='https://norvig.com/sudoku.html'>Sudoku Solver</XA> with no additional dependencies. The purpose of writing this program was to learn how to create an efficient sudoku solver that can handle a variety of puzzles using Depth-First Search and Constraint Propagation while learning the TypeScript language.
