--- a/src/content/projects/hackynews/index.mdx
+++ b/src/content/projects/hackynews/index.mdx
@@ -9,6 +9,6 @@ publish: true
 lang: 'React, Node.js'
 ---
 
-import XA from '../../../../components/ExternalAnchor.js';
+import XA from 'components/ExternalAnchor.js';
 
 Hacky News is a clone of the <italic>(in)</italic>famous <XA href="https://news.ycombinator.com">Orange Site</XA> built entirely with React and Semantic UI.
