--- a/src/content/projects/lsys/index.mdx
+++ b/src/content/projects/lsys/index.mdx
@@ -9,7 +9,7 @@ publish: true
 lang: 'Svelte, JS'
 ---
 
-import XA from '../../../../components/ExternalAnchor.js';
+import XA from 'components/ExternalAnchor.js';
 
 **_lsys_** is an interactive Fractal Generator.
 
