--- a/src/content/projects/py-ulid/index.mdx
+++ b/src/content/projects/py-ulid/index.mdx
@@ -9,6 +9,6 @@ publish: true
 lang: 'Python'
 ---
 
-import XA from '../../../../components/ExternalAnchor.js';
+import XA from 'components/ExternalAnchor.js';
 
 The py-ulid library is a minimal and self-contained implementation of the ULID (Universally Unique Lexicographically Sortable Identifier) specification in Python. For more information, please refer to the <XA href="https://github.com/ulid/spec">official specification</XA>.
