Reduce image sizes

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -6,7 +6,7 @@ import XA from 'components/ExternalAnchor';
 
 My name is Mani and I am a software developer/aspiring traveler from NYC. I'm interested in learning about languages (programming or otherwise)
 
-In my free time, I enjoy reading books, hacking together non-utilitarian software and building mechanical keyboards.
+In my free time, I enjoy reading books, hacking together ***non***-utilitarian software and building mechanical keyboards.
 
 You can find me on <XA href="https://twitter.com/itsrainingmani">Twitter</XA>, <XA href="https://github.com/itsrainingmani">Github</XA>, or reach me via <XA href="mailto:jm75312@gmail.com">email</XA>.
 
