Modify post content and excerpt

--- a/src/content/posts/emacs-2020/index.mdx
+++ b/src/content/posts/emacs-2020/index.mdx
@@ -2,7 +2,7 @@
 title: "Using Emacs in 2020"
 publish: false
 date: "2020-05-02"
-excerpt: "Thoughts on using Emacs"
+excerpt: "My thoughts on using Emacs in 2020"
 ---
 
 <section class="blog-section">
@@ -17,9 +17,7 @@ Thousands of people have probably started off blog posts that way. And with good
 
 And darn it if I'm going to let a well-trodden road discourage me from putting my own thoughts out there.
 
-So. Emacs in 2020. I've been having flashes of inspiration to learn a Lisp for a while now. There's just something ... *intriguing* about Lisps. Especially for someone serially addicted to learning new stuff. The foreign syntax, the hushed whispers of parenthesis hell, meta-programming, macros. My very fist programming language was C++ and I cut my teeth on Java, Python and C#.
-
-There's just something about Lisps that caught my attention.
+So. Emacs in 2020. I've been having flashes of inspiration to learn a Lisp for a while now. There's just something ... *intriguing* about Lisps. Especially for someone like me who always like to learn new things. The foreign syntax, the hushed whispers of parenthesis hell, meta-programming, macros. My very fist programming language was C++ and I cut my teeth on Java, Python and C#.
 
 But maybe learning a language just for those reasons isn't good enough. You have to justify it with more concrete reasons. You need to conduct a serious analysis on the pros of cons of the language, understand it's ecosystem, it's power, if any well-known companies are using it.
 
