Add description for Encrypted Deploy

--- a/src/content/projects/EncryptedDeploy/index.mdx
+++ b/src/content/projects/EncryptedDeploy/index.mdx
@@ -8,3 +8,5 @@ order: 3
 publish: true
 lang: 'Go'
 ---
+
+Go program that generates a stand-alone, single use executable containing the application installer and encrypted admin credentials allowing non-admin users to install software on a machine without explicitly needing admin privileges.
