--- a/src/content/projects/godeepfry/index.mdx
+++ b/src/content/projects/godeepfry/index.mdx
@@ -3,7 +3,7 @@ title: 'Go DeepFry'
 lede: 'Deep Fried Memes'
 date: '2018'
 repo: 'https://github.com/itsrainingmani/godeepfry'
-link: 'https://cheermethefuck.app'
+link: ''
 order: 3
 publish: true
 lang: 'Go'
