--- a/src/content/projects/yass/index.mdx
+++ b/src/content/projects/yass/index.mdx
@@ -10,5 +10,14 @@ lang: 'TypeScript'
 ---
 
 import XA from 'components/ExternalAnchor.js';
+import ZoomImage from 'components/ZoomImage.js';
+
+<section class="blog-section">
 
 YASS is a pure TypeScript implementation of Peter Norvig's <XA href='https://norvig.com/sudoku.html'>Sudoku Solver</XA> with no additional dependencies. The purpose of writing this program was to learn how to create an efficient sudoku solver that can handle a variety of puzzles using Depth-First Search and Constraint Propagation while learning the TypeScript language.
+
+<div class="blog-inset">
+    <ZoomImage src="https://raw.githubusercontent.com/itsrainingmani/yass/master/usage-example.png" caption="Usage" />
+</div>
+
+</section>
