--- a/src/content/posts/emacs-2020/index.mdx
+++ b/src/content/posts/emacs-2020/index.mdx
@@ -21,7 +21,7 @@ But maybe learning a language just for those reasons isn't good enough.
 
 <p style="text-decoration: #ff124f80 line-through">You have to justify it with more concrete reasons. You need to conduct a serious analysis on the pros of cons of the language, understand it's ecosystem, it's power, if any well-known companies are using it.</p>
 
-<div><h4 style="font-style: italic; text-shadow: 2px 2px 0px #fe75fe">Or</h4></div>
+<div><h4 style="font-style: italic; text-shadow: 2px 2px 0px var(--cyb-li-pink)">Or</h4></div>
 
 <div style="display:flex; flex-direction: row; justify-content: center;"><div style="background-color: #0016ee; padding-left: 15px; border: 5px solid #39ff14; box-shadow: 5px 5px #fe00fe, 10px 10px #00b3fe; margin-top: 10px; margin-bottom: 20px; max-width: 650px"><p style="color: white; font-style: italic">You can just pick something that you saw on Hacker news once and run with it.</p></div></div>
 
