Publish post on emacs 2020

--- a/src/content/posts/emacs-2020/index.mdx
+++ b/src/content/posts/emacs-2020/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Using Emacs in 2020"
-publish: false
+publish: true
 date: "2020-05-05"
 excerpt: "My thoughts on using Emacs in 2020"
 ---
