Change daily to weekly

--- a/src/content/learning/clojure/cohort-clojure-fam/index.mdx
+++ b/src/content/learning/clojure/cohort-clojure-fam/index.mdx
@@ -54,7 +54,7 @@ Starting today, June 22nd 2020, I will be beginning my Clojure journey anew with
 
 Expectations for myself:
 
-* Daily blog post/tweets about what I've learned.
+* Weekly blog post/tweets about what I've learned.
 * Completing the excellent *Clojure for the Brave and True* book
 * Completing clojure-koans
 * Working through Clojure exercises on 4Clojure.com
