Update about.mdx with 2021 footer

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -20,4 +20,6 @@ This site was made with the excellent <XA href="https://www.gatsbyjs.org/">Gatsb
 
 The monospace font is <XA href="https://fonts.google.com/specimen/Roboto+Mono">Roboto Mono</XA> and the sans-serif is <XA href="https://fonts.google.com/specimen/Rubik">Rubik</XA>.
 
+© Manikandan Sundararajan 2021
+
 </div>
